refs #8 fix layout issue for smartphone

--- a/src/app/components/application-page-template/application-page-template.component.scss
+++ b/src/app/components/application-page-template/application-page-template.component.scss
@@ -2,12 +2,9 @@
   /*for pc*/
   .page-wrapper {
     display: flex;
-    justify-content: flex-end;
+    flex-wrap: wrap;
   }
   .page-content-wrapper {
-    width: calc(100% - 328px);
-  }
-  .ad-wrapper {
-    width: 328px;
+    min-width: 75%;
   }
 }
